--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
   "require": {
     "cboden/ratchet": "^0.4.4",
     "react/zmq": "^v0.4.0",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "monolog/monolog": "^2.4"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
