--- a/test/Insomnia/Insomnia_2022-03-25.yaml
+++ b/test/Insomnia/Insomnia_2022-03-25.yaml
@@ -11,10 +11,10 @@ resources:
     name: 200 OK
     description: ""
     method: GET
-    body: {}
-    parameters: []
-    headers: []
-    authentication: {}
+    body: { }
+    parameters: [ ]
+    headers: [ ]
+    authentication: { }
     metaSortKey: -1648204758555.5
     isPrivate: false
     settingStoreCookies: true
@@ -30,7 +30,7 @@ resources:
     created: 1648205337451
     name: Root
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648205337551
     _type: request_group
@@ -50,8 +50,8 @@ resources:
     name: 200 OK
     description: ""
     method: POST
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_e3feaa5d6fb542dfa55916a94162d069
         name: username
@@ -65,7 +65,7 @@ resources:
         name: source
         value: "{{ _.simulated_source }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648205481025
     isPrivate: false
     settingStoreCookies: true
@@ -81,7 +81,7 @@ resources:
     created: 1648204194520
     name: Login
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648204194620
     _type: request_group
@@ -91,7 +91,7 @@ resources:
     created: 1648204174034
     name: Authentication
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648205337501
     _type: request_group
@@ -103,8 +103,8 @@ resources:
     name: 400 Missing header
     description: ""
     method: POST
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_e3feaa5d6fb542dfa55916a94162d069
         name: username
@@ -119,7 +119,7 @@ resources:
         name: source
         value: "{{ _.simulated_source }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648205119790.25
     isPrivate: false
     settingStoreCookies: true
@@ -137,8 +137,8 @@ resources:
     name: 404 Unknown user
     description: ""
     method: POST
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_e3feaa5d6fb542dfa55916a94162d069
         name: username
@@ -153,7 +153,7 @@ resources:
         name: source
         value: "{{ _.simulated_source }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648204939172.875
     isPrivate: false
     settingStoreCookies: true
@@ -171,14 +171,14 @@ resources:
     name: 200 OK
     description: ""
     method: PUT
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_26c77261a3924e67bd6d2eb47a4fbcad
         name: token
         value: "{{ _.token }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648205840091
     isPrivate: false
     settingStoreCookies: true
@@ -194,7 +194,7 @@ resources:
     created: 1648204207912
     name: Poke
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648204194607.5
     _type: request_group
@@ -206,15 +206,15 @@ resources:
     name: 400 Missing header
     description: ""
     method: PUT
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_26c77261a3924e67bd6d2eb47a4fbcad
         name: token
         value: "{{ _.token }}"
         description: ""
         disabled: true
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648205660558
     isPrivate: false
     settingStoreCookies: true
@@ -232,15 +232,15 @@ resources:
     name: 401 Unknown token
     description: ""
     method: PUT
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_26c77261a3924e67bd6d2eb47a4fbcad
         name: token
         value: "{{ _.unknown_token }}"
         description: ""
         disabled: false
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648205570791.5
     isPrivate: false
     settingStoreCookies: true
@@ -258,14 +258,14 @@ resources:
     name: 200 OK
     description: ""
     method: DELETE
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_a41388ba19fe410bba6a9b88919c962f
         name: token
         value: "{{ _.token }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648205971552
     isPrivate: false
     settingStoreCookies: true
@@ -281,7 +281,7 @@ resources:
     created: 1648204199123
     name: Logout
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648204194595
     _type: request_group
@@ -293,15 +293,15 @@ resources:
     name: 400 Missing header
     description: ""
     method: DELETE
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_a41388ba19fe410bba6a9b88919c962f
         name: token
         value: "{{ _.token }}"
         description: ""
         disabled: true
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648205905821.5
     isPrivate: false
     settingStoreCookies: true
@@ -319,15 +319,15 @@ resources:
     name: 401 Unknown token
     description: ""
     method: DELETE
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_a41388ba19fe410bba6a9b88919c962f
         name: token
         value: "{{ _.unknown_token }}"
         description: ""
         disabled: false
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648205872956.25
     isPrivate: false
     settingStoreCookies: true
@@ -345,10 +345,10 @@ resources:
     name: 405 Invalid method
     description: ""
     method: HEAD
-    body: {}
-    parameters: []
-    headers: []
-    authentication: {}
+    body: { }
+    parameters: [ ]
+    headers: [ ]
+    authentication: { }
     metaSortKey: -1648204194545
     isPrivate: false
     settingStoreCookies: true
@@ -366,8 +366,8 @@ resources:
     name: 200 OK
     description: ""
     method: POST
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_48a073bb72f04b20950495d006e1d7ef
         name: username
@@ -383,9 +383,9 @@ resources:
         description: ""
       - id: pair_f65b3c26fe5844b28bace9b7a394764d
         name: surname
-        value: User
+        value: UserInterface
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648204389410
     isPrivate: false
     settingStoreCookies: true
@@ -401,7 +401,7 @@ resources:
     created: 1648204217882
     name: Create a new user
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648204218182
     _type: request_group
@@ -409,9 +409,9 @@ resources:
     parentId: wrk_54d78f42b92f4f3cb37e379497710434
     modified: 1648204179660
     created: 1648204179660
-    name: User
+    name: UserInterface
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648204179660
     _type: request_group
@@ -423,8 +423,8 @@ resources:
     name: 400 Missing header
     description: ""
     method: POST
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - name: username
         value: "{{ _.standard_username }}"
@@ -437,9 +437,9 @@ resources:
         value: Test
         id: pair_44178563565a4073808a1105d4713ef5
       - name: surname
-        value: User
+        value: UserInterface
         id: pair_dc39ab12f0d94d819c54478ec31eb85a
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648204125529.5
     isPrivate: false
     settingStoreCookies: true
@@ -457,8 +457,8 @@ resources:
     name: 409 Already exist
     description: ""
     method: POST
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_48a073bb72f04b20950495d006e1d7ef
         name: username
@@ -474,9 +474,9 @@ resources:
         description: ""
       - id: pair_f65b3c26fe5844b28bace9b7a394764d
         name: surname
-        value: User
+        value: UserInterface
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648203993539.25
     isPrivate: false
     settingStoreCookies: true
@@ -494,14 +494,14 @@ resources:
     name: 200 OK
     description: ""
     method: GET
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_56307b6ec1e54c528f3d0b5b5c3c57b1
         name: token
         value: "{{ _.token }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648206099609
     isPrivate: false
     settingStoreCookies: true
@@ -517,7 +517,7 @@ resources:
     created: 1648204232859
     name: Get a user's information
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648204218132
     _type: request_group
@@ -529,15 +529,15 @@ resources:
     name: 400 Missing header
     description: ""
     method: GET
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_56307b6ec1e54c528f3d0b5b5c3c57b1
         name: token
         value: "{{ _.token }}"
         description: ""
         disabled: true
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648206035580.5
     isPrivate: false
     settingStoreCookies: true
@@ -555,15 +555,15 @@ resources:
     name: 401 Unknown token
     description: ""
     method: GET
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_56307b6ec1e54c528f3d0b5b5c3c57b1
         name: token
         value: "{{ _.unknown_token }}"
         description: ""
         disabled: false
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648206003566.25
     isPrivate: false
     settingStoreCookies: true
@@ -581,8 +581,8 @@ resources:
     name: 200 OK
     description: ""
     method: PUT
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_a51c1a5c99ef4730a67380f2b3d8d519
         name: token
@@ -592,7 +592,7 @@ resources:
         name: name
         value: New name
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648207050725
     isPrivate: false
     settingStoreCookies: true
@@ -608,7 +608,7 @@ resources:
     created: 1648204256864
     name: Change a user's information
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648204218082
     _type: request_group
@@ -620,14 +620,14 @@ resources:
     name: 400 Missing header
     description: ""
     method: PUT
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_a51c1a5c99ef4730a67380f2b3d8d519
         name: token
         value: "{{ _.token }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648206791341.5
     isPrivate: false
     settingStoreCookies: true
@@ -645,14 +645,14 @@ resources:
     name: 401 Unknown token
     description: ""
     method: PUT
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_a51c1a5c99ef4730a67380f2b3d8d519
         name: token
         value: "{{ _.unknown_token }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648206758918.5625
     isPrivate: false
     settingStoreCookies: true
@@ -670,8 +670,8 @@ resources:
     name: 409 Alreader exist
     description: ""
     method: PUT
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_a51c1a5c99ef4730a67380f2b3d8d519
         name: token
@@ -681,7 +681,7 @@ resources:
         name: username
         value: "{{ _.standard_username }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648206726495.625
     isPrivate: false
     settingStoreCookies: true
@@ -699,14 +699,14 @@ resources:
     name: 200 OK
     description: ""
     method: DELETE
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_3909851364f84ddf85233f819350bfe1
         name: token
         value: "{{ _.token }}"
         description: ""
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648206531958
     isPrivate: false
     settingStoreCookies: true
@@ -722,7 +722,7 @@ resources:
     created: 1648204295496
     name: Delete a user
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648204218032
     _type: request_group
@@ -734,15 +734,15 @@ resources:
     name: 400 Missing header
     description: ""
     method: DELETE
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_3909851364f84ddf85233f819350bfe1
         name: token
         value: "{{ _.token }}"
         description: ""
         disabled: true
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648206315783.5
     isPrivate: false
     settingStoreCookies: true
@@ -760,15 +760,15 @@ resources:
     name: 401 Unknown token
     description: ""
     method: DELETE
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_3909851364f84ddf85233f819350bfe1
         name: token
         value: "{{ _.unknown_token }}"
         description: ""
         disabled: false
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648206207696.25
     isPrivate: false
     settingStoreCookies: true
@@ -786,10 +786,10 @@ resources:
     name: 405 Invalid method
     description: ""
     method: HEAD
-    body: {}
-    parameters: []
-    headers: []
-    authentication: {}
+    body: { }
+    parameters: [ ]
+    headers: [ ]
+    authentication: { }
     metaSortKey: -1648204217982
     isPrivate: false
     settingStoreCookies: true
@@ -807,8 +807,8 @@ resources:
     name: 200 OK
     description: ""
     method: OPTIONS
-    body: {}
-    parameters: []
+    body: { }
+    parameters: [ ]
     headers:
       - id: pair_e39f2795c7554dbd9fa9c989bcc587ca
         name: admin
@@ -820,7 +820,7 @@ resources:
         value: 4PmB3be8Dd1azYT9IWTmeufGIMRVWVGNlmVBWOruj2tSLV6QoTpFe
         description: ""
         disabled: false
-    authentication: {}
+    authentication: { }
     metaSortKey: -1648208890826
     isPrivate: false
     settingStoreCookies: true
@@ -836,7 +836,7 @@ resources:
     created: 1648209224511
     name: Purge database
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648208890876
     _type: request_group
@@ -846,7 +846,7 @@ resources:
     created: 1648208839441
     name: Admin
     description: ""
-    environment: {}
+    environment: { }
     environmentPropertyOrder: null
     metaSortKey: -1648204179610
     _type: request_group
@@ -894,7 +894,7 @@ resources:
     modified: 1648203529516
     created: 1648203529516
     name: Default Jar
-    cookies: []
+    cookies: [ ]
     _type: cookie_jar
   - _id: spc_3ab975be02c4412d8eeca3c9662b9965
     parentId: wrk_54d78f42b92f4f3cb37e379497710434
