WebSocket: started service implementation

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,11 @@
       "Wave\\": "src/"
     }
   },
+  "autoload-dev": {
+    "psr-4": {
+      "Wave\\Tests\\": "test/"
+    }
+  },
   "authors": [
     {
       "name": "GiacomoGuidotto",
